force-app/main/default/objects/Client_Channel_Preference__c/Client_Channel_Preference__c.object-meta.xml
<CustomObject>
    <label>Client Channel Preference</label>
    <nameField>
        <label>Client Channel Preference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Channel Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>