force-app/main/default/objects/Client_Channel_Preference__c/fields/Consent_Status__c.field-meta.xml
<CustomField>
    <fullName>Consent_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent Status</label>
    <type>Checkbox</type>
</CustomField>