force-app/main/default/objects/Client_Channel_Preference__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <length>17</length>
    <type>Text</type>
</CustomField>