force-app/main/default/objects/Client_Channel_Preference__c/fields/ContactName__c.field-meta.xml
<CustomField>
    <fullName>ContactName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ContactName</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Client_Channel_Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>