force-app/main/default/objects/Client_Channel_Preference__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <formula>ContactName__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LastName</label>
    <type>Text</type>
</CustomField>