force-app/main/default/objects/Client_Channel_Preference__c/fields/Primary_Channel__c.field-meta.xml
<CustomField>
    <fullName>Primary_Channel__c</fullName>
    <label>Primary Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>